Update eslint configuration and apply lint rules to files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "demo/**/*"],
   "exclude": ["node_modules", "lib"]
 }
