--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "npm run clean && npm run build:js && npm run build:css",
     "test": "npm run lint && npm run unit",
     "lint": "npm run lint:prettier && npm run lint:js",
-    "lint:js": "eslint . --ext .ts,.tsx",
-    "lint:js:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint:js": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:js:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "lint:prettier": "prettier --list-different \"{e2e,src}/**/*.{js,jsx,ts,tsx}\"",
     "lint:prettier:fix": "prettier --write \"{e2e,src}/**/*.{js,jsx,ts,tsx}\"",
     "unit": "jest",
@@ -56,10 +56,11 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^8.25.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.4",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.2.1",
     "node-sass": "^7.0.3",
     "prettier": "^2.0.5",
