--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.12",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^29.2.0",
+    "@types/jest": "^29.2.2",
     "@types/react": "^16.14.32",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -61,30 +61,13 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.4",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.2.1",
+    "jest": "^29.2.2",
     "node-sass": "^7.0.3",
     "prettier": "^2.0.5",
     "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
-  },
-  "jest": {
-    "rootDir": "./src",
-    "resetMocks": true,
-    "resetModules": true,
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "<rootDir>/utils/raf.js",
-      "<rootDir>/utils/events.js",
-      "<rootDir>/utils/computedStyle.js",
-      "<rootDir>/propTypes.js"
-    ],
-    "setupFiles": [
-      "../jestSetup.js"
-    ]
   }
 }
