--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^29.2.2",
     "@types/react": "^16.14.32",
+    "@types/react-dom": "^18.0.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^8.25.0",
@@ -62,6 +63,7 @@
     "eslint-plugin-jest": "^27.1.4",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.1",
     "node-sass": "^7.0.3",
     "prettier": "^2.0.5",
     "react-dom": "^16.14.0",
