--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:prettier:fix": "prettier --write \"{e2e,src}/**/*.{js,jsx,ts,tsx}\"",
     "lint:prettier": "prettier --list-different \"{e2e,src}/**/*.{js,jsx,ts,tsx}\"",
     "lint": "npm run lint:prettier && npm run lint:js",
-    "prepublish": "npm run clean && npm run build",
+    "prepare": "npm run clean && npm run build",
     "test": "npm run test:build && npm run lint && npm run test:unit",
     "test:unit": "jest",
     "test:build": "tsc --project tsconfig.json --noEmit",
@@ -47,10 +47,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0"
   },
-  "files": [
-    "src",
-    "lib"
-  ],
+  "files": ["lib"],
   "devDependencies": {
     "@types/enzyme": "^3.10.12",
     "@types/enzyme-adapter-react-16": "^1.0.6",
